# cl-explainability

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
notebooks/checks/: check_fast_attribution.ipynb  check_fast_implmentation.ipynb
notebooks/dev/: dev_starter.ipynb
notebooks/encoders/: check_simclr.ipynb  check_simsiam.ipynb
notebooks/models/: check_simclr.ipynb
notebooks/plots/: all_results.ipynb  cifar_int_grad_results.ipynb  clip_use_case.ipynb  contrastive_mvp_results.ipynb  corpus_mvp_results.ipynb  corpus_size_sensitivity.ipynb  foil_size_sensitivity.ipynb  imagenet_gradient_shap_results.ipynb  imagenet_kernel_shap_results.ipynb  imagenet_rise_results.ipynb  int_grad_results.ipynb  kernel_shap_results.ipynb  mura_stats.ipynb  mvp_kernel_shap_results.ipynb  mvp_results.ipynb  mvp_results_blurring_removal.ipynb  mvp_results_zeroing_removal.ipynb  representation_eda.ipynb  self_weighted_mvp_results.ipynb  updated_corpus_size_sensitivity.ipynb  updated_foil_size_sensitivity.ipynb
notebooks/tables/: auc_results.ipynb  randomized_model_auc_results.ipynb
scripts/: analyze_attribution_correlation.py  analyze_model_randomization.py  analyze_sensitivity.py  attribute.py  augmentation_use_case.py  classifier_utils.py  clip_use_case.py  constants.py  eval.py  eval_classifier.py  eval_utils.py  experiment_utils.py  run.py  run_loop.py  run_loop_clip.py  run_parallel_screens.sh  run_screens.sh  run_sensitivity_analysis.py  run_sensitivity_screens.sh  train_classifier.py
src/cl_explain/: __init__.py  utils.py
src/cl_explain/attributions/: rise.py  (+2 more)
(+29 files in other folders)
