[metadata]
name = cl_explain
version = 0.0.1

[options]
package_dir =
    =src
packages =
    find:
python_requires =
    >=3.7
install_requires =
    numpy
    scipy
    torch
    torchvision
    captum
    tqdm
    scikit-learn

[options.packages.find]
where =
    src

[options.extras_require]
dev =
    pre-commit==2.15.0
    toml==0.10.2
    pytest==6.2.5
    ipywidgets
    jupyterlab
    anndata
    scanpy
